force-app/main/default/objects/Job_Submission__e/Job_Submission__e.object-meta.xml
<CustomObject>
    <description>RO-1685</description>
    <label>Job Submission</label>
    <pluralLabel>Job Submissions</pluralLabel>
</CustomObject>