force-app/main/default/objects/Job_Submission__e/fields/Company_Name_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Account_Name__c</fullName>
    <label>Company Name/ Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>