force-app/main/default/objects/Job_Submission__e/fields/First_Submitted_Job__c.field-meta.xml
<CustomField>
    <fullName>First_Submitted_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Submitted Job</label>
    <type>Checkbox</type>
</CustomField>