force-app/main/default/objects/Job_Submission__e/fields/Has_been_published_before__c.field-meta.xml
<CustomField>
    <fullName>Has_been_published_before__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been published before?</label>
    <type>Checkbox</type>
</CustomField>