force-app/main/default/objects/Job_Submission__e/fields/Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_ID__c</fullName>
    <label>Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>