force-app/main/default/objects/Job_Submission__e/fields/Salesforce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_ID__c</fullName>
    <label>Salesforce Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>