force-app/main/default/objects/Job_Submission__e/fields/SSSU_Company_Account__c.field-meta.xml
<CustomField>
    <fullName>SSSU_Company_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSSU Company/Account</label>
    <type>Checkbox</type>
</CustomField>