force-app/main/default/objects/Job_Submission__e/fields/Submitter_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Contact_Email__c</fullName>
    <label>Submitter / Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>